[package]
name = "simple-kafka"
version = "0.0.4"
edition = "2021"
authors = ["hitol <1126031033@qq.com>"]
description = "easier to use kafka message"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hitolz/simple-kafka/"
documentation = "https://docs.rs/simple-kafka"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = {version = "0.34.0", features = ["tokio"]}
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
lazy_static = "1.4"
toml = "0.8.0"
tokio = { version = "1.18.0", features = ["rt", "time", "full"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3",features = ["env-filter", "time", "local-time", ] }
futures = "0.3.28"
time = { version = "0.3.7", features = ["macros"] }

